@@ -119,13 +119,13 @@
             2 &amp; 1 &amp; 1\\
             1 &amp; 1 &amp; 0
             \end{bmatrix}</me></p>
-            <p>Suppose now that <m>A</m> is invertible, and therefore it does have an inverse, which we will call <m>B</m>.  Choose the vector of constants<me>\vect{b}=\colvector{1\\3\\2}</me>and consider the system of equations <m>\linearsystem{A}{\vect{b}}</m>.  Just as in <xref ref="example-SABMI" acro="SABMI" autoname="yes"/>, due to the existence of <m>B</m>, this vector equation would have the unique solution <m>\vect{x}=B\vect{b}</m>.</p>
-            <p>However, the system <m>\linearsystem{A}{\vect{b}}</m> is inconsistent.  Form the augmented matrix <m>\augmented{A}{\vect{b}}</m> and row-reduce to<me>\begin{bmatrix}
+            <p>We will show that <m>A</m> is a matrix with no inverse, with a proof by contradiction.  To this end, suppose that <m>A</m> is invertible, and call its inverse the matrix <m>B</m>.  Choose the vector of constants<me>\vect{b}=\colvector{1\\3\\2}</me>and consider the system of equations <m>\linearsystem{A}{\vect{b}}</m>.  We could now proceed exactly as we did in <xref ref="example-SABMI" acro="SABMI" autoname="yes"/>, and employ the matrix <m>B</m> to determine a unique solution to this vector equation.  Namely, the solution would be <m>\vect{x}=B\vect{b}</m>.  In other words, the system is consistent.</p>
+            <p>However, we will now show the system <m>\linearsystem{A}{\vect{b}}</m> has no solutions.  In other words, this system is inconsistent.  Form the augmented matrix <m>\augmented{A}{\vect{b}}</m> and row-reduce to<me>\begin{bmatrix}
             \leading{1} &amp; 0 &amp; 1 &amp; 0\\
             0 &amp; \leading{1} &amp; -1 &amp; 0\\
             0 &amp; 0 &amp; 0 &amp; \leading{1}
             \end{bmatrix}</me>which allows us to recognize the inconsistency by <xref ref="theorem-RCLS" acro="RCLS" autoname="yes"/>.</p>
-            <p>So the assumption of <m>A</m>'s inverse leads to a logical inconsistency (the system cannot be both consistent and inconsistent), so our assumption of an inverse is false.  So <m>A</m> is not invertible.</p>
+            <p>So the assumption of <m>A</m>'s inverse leads to a logical inconsistency as the system cannot be both consistent and inconsistent.  So our assumption of an inverse is false, and <m>A</m> is a matrix with no inverse (provably).  So we say <m>A</m> is not invertible.</p>
             <p>It is possible this example is less than satisfying.  Just where did that particular choice of the vector <m>\vect{b}</m> come from anyway?  Stay tuned for an application of the future <xref ref="theorem-CSCS" acro="CSCS" autoname="yes"/> in <xref ref="example-CSAA" acro="CSAA" autoname="yes"/>.</p>
         </example>
         <p>Let us look at one more matrix inverse before we embark on a more systematic study.</p>
